--- a/main/css/style.css
+++ b/main/css/style.css
@@ -34,7 +34,7 @@ img {
 }
 
 #header {
-  background: url(./img/showcase.jpg) no-repeat center center/cover;
+  background: url(/main/img/showcase.jpg) no-repeat center center/cover;
   height: 100vh;
   width: 100%;
 }
