--- a/main/css/style.css
+++ b/main/css/style.css
@@ -10,7 +10,6 @@ li {
 
 body {
   font-family: "Dosis";
-  background-color: red;
 }
 
 .container {
@@ -35,7 +34,7 @@ img {
 }
 
 #header {
-  background: url() no-repeat center center/cover;
+  background: url(../img/showcase.jpg) no-repeat center center/cover;
   height: 100vh;
   width: 100%;
 }
