--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,4 +4,4 @@ $secondary-color: #fff;
 $bg-white: #f0ede9;
 $bg-dark: #333;
 $container-width: 930px;
-$main-img: url(/main/img/showcase.jpg);
+$main-img: url(../img/showcase.jpg);
